--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-gesture-handler": "^1.0.10",
+    "react-native-splash-screen": "^3.1.1",
     "react-native-swiper": "^1.5.14",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^6.1.0",
